@@ -64,7 +64,8 @@ Merged from 2.2:
  * CqlConfigHelper no longer requires both a keystore and truststore to work (CASSANDRA-11532)
  * Make deprecated repair methods backward-compatible with previous notification service (CASSANDRA-11430)
  * IncomingStreamingConnection version check message wrong (CASSANDRA-11462)
-
+Merged from 2.1:
+ * Validate levels when building LeveledScanner to avoid overlaps with orphaned sstables (CASSANDRA-9935)
 
 3.5
  * StaticTokenTreeBuilder should respect posibility of duplicate tokens (CASSANDRA-11525)
